--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body:target .overlay {
 .menu {
   position: relative;
   max-width: 1200px;
+  height: auto;
   margin: 0 auto 0 auto;
   z-index: 1;
   display: flex;
@@ -52,13 +53,13 @@ body:target .overlay {
   align-items: center;
   justify-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .menu__page-item {
   font-size: 20px;
   font-family: HelveticaNeueCyr;
   font-weight: bold;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 10px 20px;
 }
 .menu__page-item-link {
   text-decoration: none;
@@ -83,14 +84,15 @@ body:target .overlay {
 }
 .menu__support-button {
   display: flex;
+  flex: 0 0 auto;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  margin-right: -17px;
   height: 35px;
   width: 35px;
   background-color: #ff8562;
   margin-left: 20px;
+  margin-right: -17px;
 }
 .menu__support-button-svg {
   fill: #009ccf;
@@ -120,7 +122,11 @@ body:target .overlay {
 .footer-menu .menu__page-item-link {
   color: #b4e3ed;
 }
+.menu-padding {
+  padding: 0 23px;
+}
 .content {
+  padding: 10px;
   z-index: 1;
   height: auto;
   display: flex;
@@ -129,21 +135,23 @@ body:target .overlay {
 }
 .col-box {
   z-index: 1;
-  width: 1200px;
+  max-width: 1200px;
   margin: 40px auto;
   display: flex;
   justify-content: left;
 }
 .col-box .column-one {
-  width: 510px;
+  max-width: 45%;
   display: flex;
   flex-direction: column;
 }
 .col-box .column-one__logo {
   margin: 0 auto;
-  width: 440px;
+  max-width: 95%;
 }
 .col-box .column-one__video {
+  min-width: 510px;
+  min-height: 280px;
   margin: 45px 0 0 0;
   border: 1px solid white;
   border-radius: 15px;
@@ -153,7 +161,7 @@ body:target .overlay {
   display: flex;
   flex-direction: column;
   align-content: start;
-  width: 510px;
+  max-width: 45%;
   margin-left: 90px;
 }
 .col-box .column-two__MCR {
@@ -176,6 +184,7 @@ body:target .overlay {
 .col-box .column-two__btn-box {
   display: flex;
   justify-content: space-around;
+  width: 100%;
   margin-top: 40px;
 }
 .col-box .column-two__btn-box__button {
@@ -217,7 +226,8 @@ body:target .overlay {
   line-height: 90%;
 }
 .box-advantages {
-  margin-top: 420px;
+  min-width: 100%;
+  margin: 420px auto 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -243,6 +253,7 @@ body:target .overlay {
 }
 .box-advantages__list-item__image {
   display: flex;
+  flex: 0 0 auto;
   justify-content: center;
   align-items: center;
   margin-top: -10px;
@@ -321,7 +332,7 @@ body:target .overlay {
   justify-content: center;
   justify-items: center;
   margin: 60px auto 0 auto;
-  width: 1200px;
+  width: 90%;
   z-index: 10;
 }
 .partners-box__title {
@@ -413,7 +424,7 @@ body:target .overlay {
   margin: 0 0 10px 5px;
 }
 .footer {
-  width: 1200px;
+  max-width: 1200px;
   margin: 20px auto 70px auto;
   display: flex;
   justify-content: space-between;
@@ -437,8 +448,8 @@ body:target .overlay {
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
-  max-width: 100%;
-  height: 2000px;
+  width: 100%;
+  max-height: 66%;
   z-index: -3;
 }
 .background-image {
@@ -448,16 +459,16 @@ body:target .overlay {
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 1100px;
-  max-width: 100%;
-  height: 50%;
+  width: 100%;
+  max-height: 50%;
   z-index: -2;
 }
 .blue-gradient {
   position: absolute;
   top: 60%;
   background: linear-gradient(to top, #009ccf 0%, transparent 100%);
-  max-width: 100%;
-  height: 800px;
+  width: 100%;
+  max-height: 26.5%;
   z-index: -1;
 }
 .btn-buy {
@@ -472,7 +483,7 @@ body:target .overlay {
 }
 .box-support {
   position: absolute;
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   visibility: hidden;
 }
@@ -695,5 +706,97 @@ body:target .overlay {
 }
 .modal__footer-questions-list-item:hover {
   color: #ff8562;
+}
+@media screen and (max-width: 1629px) {
+  .col-box .column-two__box-desc-text {
+    white-space: normal;
+  }
+  .col-box .column-two__slogan {
+    white-space: normal;
+  }
+}
+@media screen and (max-width: 1399px) {
+  .menu__pages {
+    justify-content: left;
+  }
+  .col-box {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .col-box .column-one {
+    justify-content: center;
+    align-items: center;
+    margin-right: 0;
+    max-width: none;
+  }
+  .col-box .column-one__logo {
+    max-width: 100%;
+  }
+  .col-box .column-one__video {
+    width: 663px;
+    height: 364px;
+  }
+  .col-box .column-two {
+    align-items: center;
+    max-width: 90%;
+    margin: 40px 0 0 0;
+    justify-content: center;
+  }
+  .col-box .column-two__box-desc {
+    width: 100%;
+    margin-left: 0;
+  }
+  .box-advantages {
+    max-width: 95%;
+    margin-top: 30px;
+  }
+  .box-advantages__title {
+    font-family: HelveticaNeueCyr;
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 45px;
+  }
+  .box-advantages__list {
+    width: 80%;
+    flex-direction: column;
+  }
+  .box-advantages__list-item {
+    min-width: 100%;
+    margin: 10px 0 10px 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .box-advantages__list-item .box-advantages__list-item__text-box-desc {
+    white-space: normal;
+  }
+  .media-base-box {
+    width: 90%;
+  }
+  .media-base-box .list-box {
+    width: auto;
+  }
+  .media-base-box .list-box__break {
+    display: none;
+  }
+  .box-support__btn-sticky {
+    margin: 0 0 0 85%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .menu__name-company {
+    display: none;
+  }
+  .menu__menu-leng {
+    display: none;
+  }
+  .col-box .column-one__video {
+    width: 510px;
+    height: 280px;
+  }
+  .col-box .column-two {
+    width: auto;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
