--- a/css/styles.less
+++ b/css/styles.less
@@ -23,6 +23,7 @@ body {
 .menu {
   position: relative;
   max-width: 1200px;
+  height: auto;
   margin: 0 auto 0 auto;
   z-index: 1;
   display: flex;
@@ -62,14 +63,14 @@ body {
     align-items: center;
     justify-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   &__page-item {
     font-size: 20px;
     font-family: HelveticaNeueCyr;
     font-weight: bold;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 10px 20px;
 
     &-link {
       text-decoration: none;
@@ -99,14 +100,15 @@ body {
 
   &__support-button {
     display: flex;
+    flex: 0 0 auto;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    margin-right: -17px;
     height: 35px;
     width: 35px;
     background-color: #ff8562;
     margin-left: 20px;
+    margin-right: -17px;
 
     &-svg {
       fill: #009ccf;
@@ -146,7 +148,12 @@ body {
   }
 }
 
+.menu-padding {
+  padding: 0 23px;
+}
+
 .content {
+  padding: 10px;
   z-index: 1;
   height: auto;
   display: flex;
@@ -156,22 +163,24 @@ body {
 
 .col-box {
   z-index: 1;
-  width: 1200px;
+  max-width: 1200px;
   margin: 40px auto;
   display: flex;
   justify-content: left;
 
   .column-one {
-    width: 510px;
+    max-width: 45%;
     display: flex;
     flex-direction: column;
 
     &__logo {
       margin: 0 auto;
-      width: 440px;
+      max-width: 95%;
     }
 
     &__video {
+      min-width: 510px;
+      min-height: 280px;
       margin: 45px 0 0 0;
       border: 1px solid white;
       border-radius: 15px;
@@ -183,7 +192,7 @@ body {
     display: flex;
     flex-direction: column;
     align-content: start;
-    width: 510px;
+    max-width: 45%;
     margin-left: 90px;
 
     &__MCR {
@@ -208,6 +217,7 @@ body {
     &__btn-box {
       display: flex;
       justify-content: space-around;
+      width: 100%;
       margin-top: 40px;
 
       &__button {
@@ -258,7 +268,8 @@ body {
 }
 
 .box-advantages {
-  margin-top: 420px;
+  min-width: 100%;
+  margin: 420px auto 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -268,7 +279,7 @@ body {
   color: white;
 
   &__title {
-    font-family: HelveticaNeueCyr;;
+    font-family: HelveticaNeueCyr;
     font-size: 60px;
     font-weight: bold;
     margin-top: 45px;
@@ -285,6 +296,7 @@ body {
 
       &__image {
         display: flex;
+        flex: 0 0 auto;
         justify-content: center;
         align-items: center;
         margin-top: -10px;
@@ -376,7 +388,7 @@ body {
   justify-content: center;
   justify-items: center;
   margin: 60px auto 0 auto;
-  width: 1200px;
+  width: 90%;
   z-index: 10;
 
   &__title {
@@ -484,7 +496,7 @@ body {
 }
 
 .footer {
-  width: 1200px;
+  max-width: 1200px;
   margin: 20px auto 70px auto;
   display: flex;
   justify-content: space-between;
@@ -511,8 +523,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
-  max-width: 100%;
-  height: 2000px;
+  width: 100%;
+  max-height: 66%;
   z-index: -3;
 }
 
@@ -523,19 +535,19 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 1100px;
-  max-width: 100%;
-  height: 50%;
+  width: 100%;
+  max-height: 50%;
   z-index: -2;
 }
 
-@height: 800px;
+@height: 26.5%;
 
 .blue-gradient {
   position: absolute;
   top: 60%;
   background: linear-gradient(to top, #009ccf 0%, transparent 100%);
-  max-width: 100%;
-  height: @height;
+  width: 100%;
+  max-height: @height;
   z-index: -1;
 }
 
@@ -553,7 +565,7 @@ body {
 
 .box-support {
   position: absolute;
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   visibility: hidden;
 
@@ -811,3 +823,126 @@ body {
   }
 }
 
+@media screen and (max-width: 1629px) {
+  .col-box {
+    .column-two {
+
+      &__box-desc-text {
+        white-space: normal;
+      }
+
+      &__slogan {
+        white-space: normal;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1399px) {
+  .menu {
+    &__pages {
+      justify-content: left;
+    }
+  }
+
+  .col-box {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .column-one {
+      justify-content: center;
+      align-items: center;
+      margin-right: 0;
+      max-width: none;
+
+      &__logo {
+        max-width: 100%;
+      }
+
+      &__video {
+        width: 510px * 1.3;
+        height: 280px * 1.3;
+      }
+    }
+
+    .column-two {
+      justify-content: center;
+      align-items: center;
+      max-width: 90%;
+      margin: 40px 0 0 0;
+      justify-content: center;
+
+      &__box-desc {
+        width: 100%;
+        margin-left: 0;
+      }
+    }
+  }
+
+  .box-advantages {
+    max-width: 95%;
+    margin-top: 30px;
+
+    &__title {
+      font-family: HelveticaNeueCyr;
+      font-size: 60px;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 45px;
+    }
+
+    &__list {
+      width: 80%;
+      flex-direction: column;
+
+      &-item {
+        min-width: 100%;
+        margin: 10px 0 10px 0;
+        justify-content: center;
+        align-items: center;
+
+        .box-advantages__list-item__text-box-desc {
+          white-space: normal;
+        }
+      }
+    }
+  }
+
+  .media-base-box {
+    width: 90%;
+
+    .list-box {
+      width: auto;
+
+      &__break {
+        display: none;
+      }
+    }
+  }
+
+  .box-support__btn-sticky {
+    margin: 0 0 0 85%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .menu__name-company {
+    display: none;
+  }
+
+  .menu__menu-leng {
+    display: none;
+  }
+
+  .col-box {
+    .column-one__video {
+      width: 510px;
+      height: 280px;
+    }
+
+    .column-two {
+      width: auto;
+    }
+  }
+}
