--- a/css/styles.css
+++ b/css/styles.css
@@ -813,6 +813,9 @@ body:target .overlay {
   .box-support__btn-sticky {
     margin: 0 0 0 85%;
   }
+  .brick-wall-background {
+    max-height: 40%;
+  }
 }
 @media (max-width: 767px) {
   .menu__name-company {
