--- a/css/styles.less
+++ b/css/styles.less
@@ -968,6 +968,10 @@ body {
   .box-support__btn-sticky {
     margin: 0 0 0 85%;
   }
+
+  .brick-wall-background{
+    max-height: 40%;
+  }
 }
 
 @media (max-width: 767px) {
