--- a/css/styles.css
+++ b/css/styles.css
@@ -497,7 +497,7 @@ body:target .overlay {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 90%;
+  top: 88%;
   margin: 0 0 45% 80%;
   z-index: 350;
   width: 75px;
@@ -846,6 +846,7 @@ body:target .overlay {
 }
 @media (max-width: 575px) {
   .menu__pages {
+    flex-direction: column;
     justify-content: center;
   }
   .menu__page-item {
@@ -943,14 +944,19 @@ body:target .overlay {
   .footer {
     flex-direction: column;
   }
+  .footer div {
+    margin-top: 15px;
+  }
   .box-support__btn-sticky {
-    margin: 0 0 45% 75%;
+    margin: 0 0 0 75%;
   }
   .modal {
     width: 300px;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    margin: 0 auto auto auto;
+    margin: 0 auto;
   }
   .modal__header {
     justify-content: space-between;
