--- a/css/styles.less
+++ b/css/styles.less
@@ -579,7 +579,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 90%;
+    top: 88%;
     margin: 0 0 45% 80%;
     z-index: 350;
     width: 75px;
@@ -1013,6 +1013,7 @@ body {
 @media (max-width: 575px) {
   .menu {
     &__pages {
+      flex-direction: column;
       justify-content: center;
     }
 
@@ -1142,18 +1143,22 @@ body {
   .footer {
     flex-direction: column;
 
-
+    div{
+      margin-top: 15px;
+    }
   }
 
   .box-support__btn-sticky {
-    margin: 0 0 45% 75%;
+    margin: 0 0 0 75%;
   }
 
   .modal {
     width: 300px;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    margin: 0 auto auto auto;
+    margin: 0 auto;
 
     &__header {
       justify-content: space-between;
