--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,16 @@
 * {
   margin: 0;
   padding: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  box-sizing: border-box;
+}
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 body {
   background-color: #009ccf;
   position: relative;
+  width: 100%;
 }
 body:target .overlay {
   margin-left: 100%;
@@ -128,8 +130,8 @@ body:target .overlay {
 .content {
   padding: 10px;
   z-index: 1;
-  width: auto;
   height: auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -227,8 +229,8 @@ body:target .overlay {
   line-height: 90%;
 }
 .box-advantages {
-  min-width: 100%;
-  margin: 420px auto 0 auto;
+  width: 98vw;
+  margin: 450px auto 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -336,7 +338,7 @@ body:target .overlay {
   justify-content: center;
   justify-items: center;
   margin: 60px auto 0 auto;
-  width: 90%;
+  width: 100%;
   z-index: 10;
 }
 .partners-box__title {
@@ -347,7 +349,8 @@ body:target .overlay {
   text-align: center;
 }
 .partners-box__logo-box {
-  margin: 30px 0 65px 0;
+  margin: 30px auto 65px auto;
+  width: 1200px;
   display: flex;
   justify-content: space-between;
   justify-items: center;
@@ -437,6 +440,9 @@ body:target .overlay {
   font-size: 17px;
   color: #b3b3b3;
 }
+.footer div {
+  margin: 0 5px;
+}
 .footer__email {
   color: #ff8562;
   text-decoration: underline;
@@ -453,7 +459,7 @@ body:target .overlay {
   background-size: cover;
   margin: 0 auto;
   width: 100%;
-  max-height: 66%;
+  height: 73%;
   z-index: -3;
 }
 .background-image {
@@ -462,17 +468,17 @@ body:target .overlay {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 1100px;
+  top: 43%;
   width: 100%;
-  max-height: 50%;
+  height: 50%;
   z-index: -2;
 }
 .blue-gradient {
   position: absolute;
-  top: 60%;
-  background: linear-gradient(to top, #009ccf 0%, transparent 100%);
+  top: 70%;
+  background: linear-gradient(to top, #009ccf 0%, #009ccf 80%, transparent 100%);
   width: 100%;
-  max-height: 26.5%;
+  height: 30%;
   z-index: -1;
 }
 .btn-buy {
@@ -487,8 +493,10 @@ body:target .overlay {
 }
 .box-support {
   position: absolute;
-  max-width: 1200px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: right;
+  width: 100%;
+  height: 100%;
   visibility: hidden;
 }
 .box-support__btn-sticky {
@@ -497,11 +505,12 @@ body:target .overlay {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 88%;
-  margin: 0 0 45% 80%;
   z-index: 350;
   width: 75px;
   height: 75px;
+  top: 88%;
+  right: 25%;
+  margin-bottom: 550px;
   background-color: #ff8562;
   border: none;
   border-radius: 50%;
@@ -679,8 +688,8 @@ body:target .overlay {
 .modal__footer {
   margin: 30px;
   padding: 20px;
-  width: 270px;
-  height: 130px;
+  width: auto;
+  height: auto;
   background-color: #f2f2f2;
   border: none;
   border-radius: 8px;
@@ -813,6 +822,9 @@ body:target .overlay {
   .strategic-partners-box__desc br {
     display: none;
   }
+  .partners-box__logo-box {
+    width: 90%;
+  }
   .media-base-box {
     width: 90%;
   }
@@ -827,9 +839,20 @@ body:target .overlay {
   }
   .brick-wall-background {
     max-height: 40%;
+    top: 23%;
+  }
+  .background-image {
+    height: 30%;
+    top: 48%;
+  }
+  .blue-gradient {
+    top: 72%;
   }
 }
 @media (max-width: 767px) {
+  .menu__pages {
+    justify-content: center;
+  }
   .menu__name-company {
     display: none;
   }
@@ -843,6 +866,13 @@ body:target .overlay {
   .col-box .column-two {
     width: auto;
   }
+  .partners-box__logo-box {
+    width: 95%;
+  }
+  .brick-wall-background {
+    max-height: 40%;
+    top: 20%;
+  }
 }
 @media (max-width: 575px) {
   .menu__pages {
@@ -852,6 +882,15 @@ body:target .overlay {
   .menu__page-item {
     margin: 10px;
     font-size: 5vw;
+  }
+  .brick-wall-background {
+    top: 6%;
+  }
+  .background-image {
+    top: 30%;
+  }
+  .blue-gradient {
+    top: 65%;
   }
   .col-box {
     margin-top: 0;
