--- a/css/styles.less
+++ b/css/styles.less
@@ -3,15 +3,17 @@
 * {
   margin: 0;
   padding: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  box-sizing: border-box;
+
+  &:before, &:after {
+    box-sizing: border-box;
+  }
 }
 
 body {
   background-color: #009ccf;
   position: relative;
+  width: 100%;
 
   &:target {
     .overlay {
@@ -155,8 +157,8 @@ body {
 .content {
   padding: 10px;
   z-index: 1;
-  width: auto;
   height: auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -269,8 +271,8 @@ body {
 }
 
 .box-advantages {
-  min-width: 100%;
-  margin: 420px auto 0 auto;
+  width: 98vw;
+  margin: 450px auto 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -392,7 +394,7 @@ body {
   justify-content: center;
   justify-items: center;
   margin: 60px auto 0 auto;
-  width: 90%;
+  width: 100%;
   z-index: 10;
 
   &__title {
@@ -404,7 +406,8 @@ body {
   }
 
   &__logo-box {
-    margin: 30px 0 65px 0;
+    margin: 30px auto 65px auto;
+    width: 1200px;
     display: flex;
     justify-content: space-between;
     justify-items: center;
@@ -509,6 +512,10 @@ body {
   font-size: 17px;
   color: #b3b3b3;
 
+  div {
+    margin: 0 5px;
+  }
+
   &__email {
     color: #ff8562;
     text-decoration: underline;
@@ -528,7 +535,7 @@ body {
   background-size: cover;
   margin: 0 auto;
   width: 100%;
-  max-height: 66%;
+  height: 73%;
   z-index: -3;
 }
 
@@ -538,20 +545,18 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 1100px;
+  top: 43%;
   width: 100%;
-  max-height: 50%;
+  height: 50%;
   z-index: -2;
 }
 
-@height: 26.5%;
-
 .blue-gradient {
   position: absolute;
-  top: 60%;
-  background: linear-gradient(to top, #009ccf 0%, transparent 100%);
+  top: 70%;
+  background: linear-gradient(to top, #009ccf 0%, #009ccf 80%, transparent 100%);
   width: 100%;
-  max-height: @height;
+  height: 30%;
   z-index: -1;
 }
 
@@ -569,8 +574,10 @@ body {
 
 .box-support {
   position: absolute;
-  max-width: 1200px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: right;
+  width: 100%;
+  height: 100%;
   visibility: hidden;
 
   &__btn-sticky {
@@ -579,11 +586,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 88%;
-    margin: 0 0 45% 80%;
     z-index: 350;
     width: 75px;
     height: 75px;
+    top: 88%;
+    right: 25%;
+    margin-bottom: 550px;
     background-color: #ff8562;
     border: none;
     border-radius: 50%;
@@ -788,8 +796,8 @@ body {
   &__footer {
     margin: 30px;
     padding: 20px;
-    width: 270px;
-    height: 130px;
+    width: auto;
+    height: auto;
     background-color: #f2f2f2;
     border: none;
     border-radius: 8px;
@@ -968,6 +976,12 @@ body {
     }
   }
 
+  .partners-box {
+    &__logo-box {
+      width: 90%;
+    }
+  }
+
   .media-base-box {
     width: 90%;
 
@@ -986,17 +1000,36 @@ body {
 
   .brick-wall-background {
     max-height: 40%;
+    top: 23%;
+  }
+
+  .background-image {
+    height: 30%;
+    top: 48%;
+  }
+
+  .blue-gradient{
+    top: 72%;
   }
 }
 
 @media (max-width: 767px) {
-  .menu__name-company {
-    display: none;
+  .menu{
+
+    &__pages{
+      justify-content: center;
+    }
+
+    &__name-company {
+      display: none;
+    }
+
+    &__menu-leng {
+      display: none;
+    }
   }
 
-  .menu__menu-leng {
-    display: none;
-  }
+
 
   .col-box {
     .column-one__video {
@@ -1007,6 +1040,17 @@ body {
     .column-two {
       width: auto;
     }
+  }
+
+  .partners-box {
+    &__logo-box {
+      width: 95%;
+    }
+  }
+
+  .brick-wall-background {
+    max-height: 40%;
+    top: 20%;
   }
 }
 
@@ -1021,6 +1065,18 @@ body {
       margin: 10px;
       font-size: 5vw;
     }
+  }
+
+  .brick-wall-background {
+    top: 6%;
+  }
+
+  .background-image {
+    top: 30%;
+  }
+
+  .blue-gradient {
+    top: 65%;
   }
 
   .col-box {
@@ -1143,7 +1199,7 @@ body {
   .footer {
     flex-direction: column;
 
-    div{
+    div {
       margin-top: 15px;
     }
   }
